Ajustement responsive & wording

--- a/src/app/welcome_page/welcome.page.html
+++ b/src/app/welcome_page/welcome.page.html
@@ -17,8 +17,8 @@
     </div>
 
     <a>
-        <div expand="block" [routerLink]="['/home/shows']" class="button-home" >
-            <button class="text-button ion-padding-top">Choisi ton émission</button>
+        <div expand="block" [routerLink]="['/home/deals']" class="button-home">
+            <button class="text-button ion-padding-top">Accède à toutes les offres</button>
         </div>
     </a>
 
